:bug: Double tagLines / :lipstick: Profile picture aligned with tagLine on mobile

--- a/kmfrontend/src/frontend/components/karas/KaraLine.scss
+++ b/kmfrontend/src/frontend/components/karas/KaraLine.scss
@@ -41,6 +41,10 @@
 		border-bottom-color: forestgreen;
 	}
 
+	.img-container {
+		flex-grow: 1;
+	}
+
 	.img-circle {
 		width: 100%;
 		height: 100%;
@@ -52,8 +56,8 @@
 		margin: 0 .25em;
 		user-select: none;
 		&.mobile {
-			max-width: 4em;
-			max-height: 4em;
+			max-width: 1.75em;
+			max-height: 1.75em;
 			margin: 0.25em;
 		}
 	}
